fix: bugs criticos de n+1, uso de env